2008-07-01  Lars Poeschel  <larsi@wh2.tu-dresden.de>

    * src/fr30_md91301.ld: Reworked memory layout for flash support.
    * src/hal_diag.c:      Little updates in serial0 configuration registers.
    * src/variant.S:       Made it possible for the platform to override
                           variants rom vectors.
    * include/variant.inc: Moved macros for sdram config addresses to platform.

2007-07-09  Lars Poeschel  <larsi@wh2.tu-dresden.de>

    * src/fr30_md91301.ld:
    * src/hal_diag.c:
    * src/var_misc.c:
    * include/hal_diag.h:
    * include/var_arch.h:
    * include/variant.inc:
    * include/var_intr.h:
    * cdl/hal_fr30_mb91301.cdl: Initial fr30 ecos port

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public